--- a/index.html
+++ b/index.html
@@ -103,14 +103,16 @@
                                     </div>
                                 </div>
                         </form><br>
+                        <p class="renderers-count">Renderers: 0</p><br>
+                        <button class="uk-button uk-button-primary uk-button-large button-add-renderer">Add renderer</button>
                         <button class="uk-button uk-button-default uk-button-large button-render">Render</button>
                 </li>
             </ul>
-            
+            <img src="" class="framebuffer"></center>
             </div>
             <br>
             <center>
-            <img src="" class="framebuffer"></center>
+            
             <style>
                 canvas{
                     background-color:black; 
